--- a/printshop/static/style.css
+++ b/printshop/static/style.css
@@ -10,6 +10,15 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+ul {
+    padding-left: 15px;
+}
+
+li {
+    margin-top: 2px;
+    margin-bottom: 3px;
+}
+
 .page {
     width: 260mm;
     height: 200mm;
@@ -26,10 +35,15 @@ div {
     box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6, .keyword{
+h1, h2, h3, h4, h5, h6{
     font-variant: small-caps;
     margin: 0;
     padding: 0;
+}
+
+.keyword {
+    font-variant: small-caps;
+    text-decoration: dotted underline;
 }
 
 .box {
@@ -122,10 +136,6 @@ h1, h2, h3, h4, h5, h6, .keyword{
     margin-bottom: 3px;
 }
 
-.report-card .skill-check-helper ul{
-    padding-left: 15px;
-}
-
 .report-card .ability{
     height: 100%;
     width: 100%;
@@ -196,9 +206,14 @@ h1, h2, h3, h4, h5, h6, .keyword{
     grid-row: 3;
 }
 
+.report-card .magic-corruption{
+    grid-column: 3;
+    grid-row: 2 / 3;
+}
+
 .report-card .skill-corruption{
     grid-column: 3;
-    grid-row: 4;
+    grid-row: 3 / 4;
 }
 
 .report-card .finaid{
@@ -264,4 +279,184 @@ h1, h2, h3, h4, h5, h6, .keyword{
     font-weight: lighter;
     font-size: x-small;
     font-style: italic;
+}
+
+/*
+
+  /$$$$$$                          /$$                   /$$
+ /$$__  $$                        | $$                  | $$
+| $$  \__/  /$$$$$$  /$$$$$$/$$$$ | $$$$$$$   /$$$$$$  /$$$$$$
+| $$       /$$__  $$| $$_  $$_  $$| $$__  $$ |____  $$|_  $$_/
+| $$      | $$  \ $$| $$ \ $$ \ $$| $$  \ $$  /$$$$$$$  | $$
+| $$    $$| $$  | $$| $$ | $$ | $$| $$  | $$ /$$__  $$  | $$ /$$
+|  $$$$$$/|  $$$$$$/| $$ | $$ | $$| $$$$$$$/|  $$$$$$$  |  $$$$/
+ \______/  \______/ |__/ |__/ |__/|_______/  \_______/   \___/
+
+*/
+
+/* a tarot card is about 70mm wide and about 120mm tall */
+
+.card {
+    width: 10mm;
+    height: 15mm;
+    border: 1px solid black;
+    margin: 5px;
+    border-radius: 2mm;
+    float: left;
+    font-weight: bold;
+    font-size: x-large;
+    text-align: center;
+    line-height: 15mm;
+    background-color: lightgrey;
+}
+
+.card-major{
+    font-size: large;
+}
+
+.combat{
+    height: 199mm;
+    padding: 0 10px;
+    display: grid;
+    grid-template-rows: repeat(12, 1fr);
+    grid-template-columns: 1fr 1fr 1fr;
+    font-size: small;
+    column-gap: 2mm;
+    row-gap: 2mm;
+}
+
+.unarmed-strike{
+    grid-row: 1 / 6;
+    grid-column: 1;
+}
+
+.defend {
+    grid-row: 1 / 6;
+    grid-column: 2;
+}
+
+.concentrate{
+    grid-row: 1 / 6;
+    grid-column: 3;
+}
+
+.run-away{
+    grid-row: 7 / 13;
+    grid-column: 1;
+}
+
+.movement{
+    grid-row: 9 / 13;
+    grid-column: 2;
+}
+
+.friendship{
+    grid-row: 6 / 9;
+    grid-column: 3;
+}
+
+.tower {
+    grid-row: 9 / 13;
+    grid-column: 3;
+}
+
+.turn {
+    grid-row: 6 / 9;
+    grid-column: 2;
+    font-size: x-small;
+}
+
+.corruption-container{
+    width: 50%;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.combat-ability {
+    border: 1px solid black;
+    overflow: hidden;
+    padding: 2px;
+    position: relative;
+}
+
+.narrative-ability {
+    border: 1px solid black;
+    overflow: hidden;
+    padding: 2px;
+    position: relative;
+}
+
+.combat-ability-top .strongweak {
+    position: absolute;
+    right: 2px;
+    bottom: 2px;
+}
+
+.combat-ability-bottom .strongweak {
+    position: absolute;
+    right: 2px;
+    top: 2px;
+}
+
+.tarot-bottom {
+    width: 70mm;
+    height: 30mm;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+    border-bottom-left-radius: 5mm;
+    border-bottom-right-radius: 5mm;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.tarot-top {
+    width: 70mm;
+    height: 30mm;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    border-top: 2px solid black;
+    border-top-left-radius: 5mm;
+    border-top-right-radius: 5mm;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.goodidea{
+    grid-row: 1 / 6;
+    grid-column: 1;
+}
+
+
+.aquarius{
+    grid-row: 1 / 9;
+    grid-column: 2;
+}
+
+.aquarius-narrative{
+    grid-row: 9 / 14;
+    grid-column: 2;
+}
+
+.virgo{
+    grid-row: 1 / 8;
+    grid-column: 1;
+}
+
+.virgo-narrative{
+    grid-row: 8 / 14;
+    grid-column: 1;
+}
+
+.ophiuchus{
+    grid-row: 1 / 8;
+    grid-column: 3;
+}
+
+.ophiuchus-narrative{
+    grid-row: 8 / 14;
+    grid-column: 3;
 }
