--- a/printshop/static/style.css
+++ b/printshop/static/style.css
@@ -549,3 +549,13 @@ h1, h2, h3, h4, h5, h6{
     grid-row: 6 / 9;
     grid-column: 3;
 }
+
+.gemini{
+    grid-row: 9 / 14;
+    grid-column: 2;
+}
+
+.gemini-narrative{
+    grid-row: 9 / 14;
+    grid-column: 3;
+}
